--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "dateformat": "^5.0.3",
     "linkify-react": "^3.0.4",
     "linkifyjs": "^3.0.5",
+    "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^6.10.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
+    "styled-components": "^5.2.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
