--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dateformat": "^5.0.3",
     "linkify-react": "^3.0.4",
     "linkifyjs": "^3.0.5",
+    "msw": "^1.3.2",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
